# See: https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name             = gothon
provides         = gothon
description      = Gothon runs GO Code from Python using IPC RPC JSON.
url              = https://github.com/juancarlospaco/gothon#gothon
download_url     = https://github.com/juancarlospaco/gothon#gothon
author           = Juan Carlos
author_email     = juancarlospaco@gmail.com
maintainer       = Juan Carlos
maintainer_email = juancarlospaco@gmail.com
keywords         = minimalism, python3, go, golang, ipc, rpc, json, socket, speed
license          = BSD
platforms        = Linux, Darwin
version          = attr: gothon.__version__
project_urls     =
    Docs = https://github.com/juancarlospaco/gothon/README.md
    Bugs = https://github.com/juancarlospaco/gothon/issues
    C.I. = https://travis-ci.org/juancarlospaco/gothon
    Chat = https://t.me/juancarlospaco

# license_file = LICENSE              # Commented out to reduce package size.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Other Audience
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
include_package_data = True
python_requires  = >=3.6
tests_require    = isort ; prospector ; pre-commit ; pre-commit-hooks
install_requires =
setup_requires   =

[bdist_wheel]
universal = 1
python-tag = py36

[install_lib]
compile = 0
optimize = 2

[bdist_egg]
exclude-source-files = true

# [options.package_data]
# * = *.pxd, *.pyx, *.json, *.txt

# [options.exclude_package_data]
# ;* = *.c, *.so, *.js

# [options.entry_points]
# console_scripts =
#     foo = my_package.some_module:main_func
#     bar = other_module:some_func
# gui_scripts =
#     baz = my_package_gui:start_func

# [options.packages.find]
# where   = .
# include = *.py, *.pyw
# exclude = *.c, *.so, *.js, *.tests, *.tests.*, tests.*, tests
